--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <h1>Electsys in Safari</h1>
     <p>一个移植自chrome上的交大选课插件，效果与chrome上的插件完全一致。</p>
     <a href="./electsys.safariextz" target="_self">下载点我（测试版）</a>
-    <p>如果有任何问题，请反馈至<a href="https://github.com/gaocegege/electsys-safari/issues">https://github.com/gaocegege/electsys-safari/issues</a>，或发邮件至<span>gaocegege#hotmail.com（#换成@）</span></p>
+    <p>如果有任何问题，请反馈至<a href="https://github.com/gaocegege/electsys-safari/issues">https://github.com/gaocegege/electsys-safari/issues</a>，或发邮件至<span>gaocegege#hotmail.com（#换成@）</span>
+    </p>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-54253120-1', 'auto');
+    ga('require', 'linkid', 'linkid.js');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
