--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Electsys in Safari</h1>
     <p>一个移植自chrome上的交大选课插件，效果与chrome上的插件完全一致。</p>
-    <a href="./electsys.safariextz" target="_self">下载点我（测试版）</a>
+    <a href="./electsys.safariextz" target="_self">下载点我</a>
     <p>如果有任何问题，请反馈至<a href="https://github.com/gaocegege/electsys-safari/issues">https://github.com/gaocegege/electsys-safari/issues</a>，或发邮件至<span>gaocegege#hotmail.com（#换成@）</span>
     </p>
     <script>
